--- a/components/Footer/Footer.css
+++ b/components/Footer/Footer.css
@@ -10,5 +10,6 @@
 }
 
 .ftInnerContainer p {
-  margin: 0;
+  background-color: var(--background-secondary);
+  margin: 0;  
 }
